[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pulselink-mcp"
version = "0.2.0"
description = "PulseLink — keyless open-web & social research source (MCP Server + A2A Server)"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=0.50.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.50.0",]
agent = [ "agent-utilities[agent,logfire]>=0.50.0",]
# Heavy / fragile transport deps stay OPTIONAL + lazy-imported (keyless-first):
# the keyless web/forum/news/dev sources need only `requests` (via agent-utilities).
youtube = [ "yt-dlp>=2024.0",]
feeds = [ "feedparser>=6.0",]
audio = [ "faster-whisper>=1.0",]
sources = [ "pulselink-mcp[youtube,feeds]>=0.2.0",]
all = [ "pulselink-mcp[mcp,agent,logfire,youtube,feeds,audio]>=0.2.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",
    "feedparser>=6.0",]

[project.scripts]
pulselink-mcp = "pulselink_mcp.mcp_server:mcp_server"
pulselink-agent = "pulselink_mcp.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
pulselink_mcp = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
